# freedv_dongle

./: .gitmodules  CMakeLists.txt  README.md
cmake/: TeensyToolchain.cmake
freertos/: CMakeLists.txt
src/: CMakeLists.txt  dongle_protocol.c  dongle_protocol.h  main.cpp  ringbuf.c  ringbuf.h
teensy-lib/: CMakeLists.txt
test/: endless_loop.c  endless_port_open.c  test.c
